--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -12,14 +12,14 @@
   <!-- end::1 Level -->
 
   <!-- begin::1 Level -->
-  <!-- <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
+   <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
     <a class="menu-link" routerLink="/builder" routerLinkActive="active">
       <span class="menu-text">Builder</span>
       <ng-container *ngIf="rootArrowEnabled">
         <i class="menu-arrow"></i>
       </ng-container>
     </a>
-  </li> -->
+  </li> 
   <!-- end::1 Level -->
 
 </ul>
