--- a/src/app/pages/_layout/layout.component.html
+++ b/src/app/pages/_layout/layout.component.html
@@ -1,12 +1,12 @@
 <!--begin::Main-->
 <ng-container *ngIf="selfLayout !== 'blank'; else blankLayout">
   <!-- begin:: Header Mobile -->
-  <app-header-mobile
+  <!-- <app-header-mobile
     #ktHeaderMobile
     id="kt_header_mobile"
     class="header-mobile align-items-center"
     [ngClass]="headerMobileClasses"
-  ></app-header-mobile>
+  ></app-header-mobile> -->
   <!-- end:: Header Mobile -->
   <div class="d-flex flex-column flex-root">
     <!--begin::Page-->
@@ -39,12 +39,12 @@
       <!--begin::Wrapper-->
       <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
         <!-- begin:: Header -->
-        <app-header
+         <!-- <app-header
           #ktHeader
           id="kt_header"
           class="header"
           [ngClass]="headerCSSClasses"
-        ></app-header>
+        ></app-header>  -->
         <!-- end:: Header -->
 
         <!-- begin:: Content -->
@@ -55,10 +55,10 @@
         >
           <!-- begin:: Content Head -->
           <ng-container *ngIf="subheaderDisplay">
-            <app-subheader-wrapper></app-subheader-wrapper>
+            <!-- <app-subheader-wrapper></app-subheader-wrapper> SUB HEADER-->
           </ng-container>
           <!-- end:: Content Head -->
-
+<br>
           <!-- begin:: Content Body -->
           <ng-container *ngIf="contentExtended">
             <router-outlet></router-outlet>
@@ -80,11 +80,11 @@
         <!-- end:: Content -->
         <ng-container *ngIf="footerDisplay">
           <!--begin::Footer-->
-          <app-footer
+          <!-- <app-footer
             class="footer bg-white py-4 d-flex flex-lg-column w-100"
             id="kt_footer"
             [ngClass]="footerCSSClasses"
-          ></app-footer>
+          ></app-footer> -->
           <!--end::Footer-->
         </ng-container>
       </div>
