--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -87,21 +87,20 @@
         data-menu-toggle="hover"
         routerLinkActive="menu-item-open"
       >
-        <a
-          class="menu-link menu-toggle"
-          routerLinkActive="active"
-          href="/reportes"
-        >
+      <a
+      class="menu-link"
+      routerLink="/reportes/customers"
+      routerLinkActive="active"
+    >
           <span
             [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'"
             cacheSVG="true"
             class="svg-icon menu-icon"
           ></span>
-          <span class="menu-text">Reportes</span>
+          <span class="menu-text">Reservas y Huéspedes</span>
           <i class="menu-arrow"></i>
         </a>
         <div class="menu-submenu">
-          <i class="menu-arrow"></i>
           <ul class="menu-subnav">
            <!-- <li class="menu-item" aria-haspopup="true">
               <span class="menu-link">
@@ -110,7 +109,7 @@
             </li> -->
 
             <!-- begin::2 Level -->
-            <li
+            <!-- <li
               class="menu-item"
               aria-haspopup="true"
               data-menu-toggle="hover"
@@ -126,7 +125,7 @@
                 </i>
                 <span class="menu-text">Lista de Húespedes</span>
               </a>
-            </li>
+            </li> -->
             <!-- end::2 Level -->
 
             <!-- begin::2 Level -->
