.cdk-overlay-container, .cdk-overlay-pane
  z-index: 9999 !important;

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
@@ -1,6 +1,8 @@
-
 .mat-select
 {
   width: fit-content;
   min-width: 100%;
+}
+.cdk-overlay-container, .cdk-overlay-pane {
+  z-index: 9999 !important;
 }
