--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -329,7 +329,7 @@
     <div class="cursor-default overlay overlay-block modal-body" style="background-color: #dadcdf">
       <div class="form-group">
         <div class="row">
-          <label class="form-label" for="form1">Buscar en Historico</label>
+          <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
           <div  class="text-center input-group col-lg-12">
               <input  #filterName
                       type="search"
@@ -348,7 +348,7 @@
           </div>
         </div>
         <div  [style]="displayNone" class="name-container-dropdown">
-          <button type="button" (click)="closeList();filterName.value = '';limpiaInput() " class="btn btn-block" style="background-color: #025976; font-weight: bold; color: white;">Cancelar</button>
+          <button type="button" (click)="closeList();filterName.value = '';limpiaInput() " class="btn btn-block" style="background-color: #fa6d7c; font-weight: bold; color: white;">Cancelar</button>
           <mat-selection-list  (click)="closeList(); onSelectHuesped(nombres.selectedOptions.selected[0]?.value)" #nombres [multiple]="false" >
             <mat-list-option *ngFor="let huesped of historicoService.items$ | async"  [value]="huesped.nombre">
               {{huesped.nombre}}
@@ -361,7 +361,7 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <label class="form-label">Escribe tu Nombre</label>
+            <label class="form-label">Nombre Completo</label>
             <input
               type="text"
               class="form-control form-control-lg form-control-solid"
@@ -394,7 +394,7 @@
               Maximo 100 letras
             </div>
             <mat-error *ngIf="nombre.errors?.required">
-              * Escribe tu Nombre
+              * Obligatorio
             </mat-error>
           </div>
         </div>
@@ -403,12 +403,12 @@
         <div class="form-group row">
 
         <div class="col-lg-6">
-          <label class="form-label">Escribe tu Email</label>
+          <label class="form-label">Email</label>
           <input
             type="email"
             class="form-control form-control-lg form-control-solid"
             name="email"
-            placeholder="Escribe tu Email"
+            placeholder="Email"
             autocomplete="off"
             formControlName="email"
             value="{{huesped.email}}"
@@ -441,7 +441,7 @@
         </div>
 
         <div class="col-lg-6">
-          <label class="form-label">Escribe tu Teléfono</label>
+          <label class="form-label">Teléfono</label>
           <input
             type="tel"
             class="form-control form-control-lg form-control-solid"
