- Ponen visible el MenuHeader en version Mobil

--- a/src/app/pages/_layout/layout.component.html
+++ b/src/app/pages/_layout/layout.component.html
@@ -1,12 +1,12 @@
 <!--begin::Main-->
 <ng-container *ngIf="selfLayout !== 'blank'; else blankLayout">
   <!-- begin:: Header Mobile -->
-  <!-- <app-header-mobile
+  <app-header-mobile
     #ktHeaderMobile
     id="kt_header_mobile"
     class="header-mobile align-items-center"
     [ngClass]="headerMobileClasses"
-  ></app-header-mobile> -->
+  ></app-header-mobile>
   <!-- end:: Header Mobile -->
   <div class="d-flex flex-column flex-root">
     <!--begin::Page-->
