Actualizacion de Diseño y API
- Actualizacion completa de diseño en Editar-Folio
- Se agrego funcionalidad de "Adicionales a Reservaciones" en la API
- Se agrego actualiza Estatus en la API

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.scss
@@ -6,3 +6,10 @@
 .cdk-overlay-container, .cdk-overlay-pane {
   z-index: 9999 !important;
 }
+.control-label{
+  color: #025976; 
+  font-weight: bold;
+}
+.sub-menu{
+  background-color:#319dd7;
+}
