--- a/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
+++ b/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
@@ -154,6 +154,9 @@
             </div>
           </div>
         </div>
+        <div *ngIf="display==false" class="row">
+          <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
+        </div>  
       </div>
 
         <div class="col-sm-6">
@@ -173,12 +176,14 @@
               </div>
             </div>
           </div>
-        </div>    
+          <div *ngIf="display==false" class="row">
+            <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
+          </div>  
+        </div>  
+       
     </div>
 
-    <div *ngIf="display==false" class="row">
-      <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
-    </div>
+  
 
 
     <div class="row col-md-12">
@@ -206,9 +211,9 @@
                       class="form-control form-control-lg form-control-solid"
                       [formControl]="numeroHab"
                       placeholder="-- {{placeHolder}} -- ">
-            <footer>
+            <!-- <footer>
               <button style="background-color: #319dd7;" (click)="okayChecked()" mat-raised-button class="btn btn-blocked">Confirmar</button>
-            </footer>
+            </footer> -->
             <!-- <mat-option (click)="Allchecked($event)">Todos</mat-option> -->
               <div>
                 <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of mySet" [value]="numero">{{numero}}</mat-option>
@@ -241,7 +246,8 @@
       
 
       <div class="col-lg-6">
-        <button disabled class="btn btn-warning btn-block" type="submit">
+        <button (click)="actualizarYGuardar()"
+                class="btn btn-warning btn-block" type="submit">
           Actualizar y Guardar
         </button>
         <br>
@@ -262,7 +268,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <p>Ocurrio un Error al actualizar al Húesped intente de nuevo mas tarde&hellip;</p>
+    <p>{{mensaje_error}}&hellip;</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cerrar</button>
