--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal/edit-reserva-modal.component.html
@@ -224,7 +224,7 @@
           class="form-control"
           type="text"
           value="$ {{
-            ((huesped.tarifa)/(huesped.noches)).toLocaleString('es-MX')
+            ((huesped.tarifa)).toLocaleString('es-MX')
           }}    MXN"
         />
       </div>
