--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-dropdown-inner/user-dropdown-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-dropdown-inner/user-dropdown-inner.component.html
@@ -134,7 +134,7 @@
       <a
         class="btn btn-light-primary font-weight-bold cursor-pointer"
         (click)="logout()"
-        >Sign Out</a
+        >Cerrar Sesi'on</a
       >
       <a class="btn btn-clean font-weight-bold cursor-pointer">Upgrade Plan</a>
     </div>
