--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -27,6 +27,7 @@
     </div>
     <!--begin::Aside-->
 
+    
     <!--begin::Content-->
     <div
       class="login-content flex-row-fluid d-flex flex-column justify-content-center position-relative overflow-hidden p-7 mx-auto">
@@ -37,11 +38,11 @@
       <!--end::Content body-->
 
       <!--begin::Content footer-->
-      <div class="d-flex justify-content-lg-start justify-content-center align-items-end py-7 py-lg-0">
+      <!-- <div class="d-flex justify-content-lg-start justify-content-center align-items-end py-7 py-lg-0">
         <a href="#" class="text-primary font-weight-bolder font-size-h5">Terms</a>
         <a href="#" class="text-primary ml-10 font-weight-bolder font-size-h5">Plans</a>
         <a href="#" class="text-primary ml-10 font-weight-bolder font-size-h5">Contact Us</a>
-      </div>
+      </div> -->
       <!--end::Content footer-->
     </div>
     <!--end::Content-->
