--- a/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -160,11 +160,9 @@
           id="kt_quick_user_toggle">
           <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
           <span
-            class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.fullname }}</span>
+            class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.nombre }}</span>
           <span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
-            <span class="symbol-label font-size-h5 font-weight-bold">{{
-              _user.fullname[0]
-            }}</span>
+            <span class="symbol-label font-size-h5 font-weight-bold">{{_user.nombre[0]}}</span>
           </span>
         </div>
       </div>
@@ -180,10 +178,10 @@
           <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-2">
             <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
             <span
-              class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.fullname }}</span>
+              class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.nombre }}</span>
             <span class="symbol symbol-35 symbol-light-success">
               <span class="symbol-label font-size-h5 font-weight-bold">{{
-                _user.fullname | firstLetter
+                _user.nombre[0] | firstLetter
               }}</span>
             </span>
           </div>
