--- a/src/app/pages/_layout/layout.component.html
+++ b/src/app/pages/_layout/layout.component.html
@@ -39,12 +39,12 @@
       <!--begin::Wrapper-->
       <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
         <!-- begin:: Header -->
-         <!-- <app-header
+         <app-header
           #ktHeader
           id="kt_header"
           class="header"
           [ngClass]="headerCSSClasses"
-        ></app-header>  -->
+        ></app-header> 
         <!-- end:: Header -->
 
         <!-- begin:: Content -->
