--- a/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
+++ b/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="d-flex flex-column">
           <a href="#" class="font-weight-bold font-size-h5 text-dark-75 text-hover-primary">
-            {{ _user.firstname }} {{ _user.lastname }}
+            {{ _user.nombre }}
           </a>
           <div class="text-muted mt-1">
             Application Developer
@@ -42,8 +42,7 @@
               </span>
             </a>
 
-            <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 cursor-pointer" (click)="logout()">Sign
-              Out</a>
+            <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 cursor-pointer" (click)="logout()">Cerrar Sesión</a>
           </div>
         </div>
       </div>
