--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <!--begin::Signin-->
 <div class="login-form login-signin">
+
   <!--begin::Form-->
   <form
     class="form"
@@ -11,10 +12,10 @@
     <!--begin::Title-->
     <div class="pb-13 pt-lg-0 pt-5">
       <h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-        Welcome to Metronic
+        Bienvenido a MovNext
       </h3>
       <span class="text-muted font-weight-bold font-size-h4"
-        >New Here?
+        >Nuevo Usuario?
         <a
           routerLink="/auth/registration"
           id="kt_login_signup"
@@ -26,67 +27,65 @@
     <!--end::Title-->
 
     <!-- begin::Alert info-->
-    <ng-container *ngIf="!hasError">
+    <!-- <ng-container *ngIf="!hasError">
       <div class="mb-10 alert alert-custom alert-light-info alert-dismissible">
         <div class="alert-text">
-          Use account <strong>{{ defaultAuth.email }}</strong> and password
+          Use account <strong>{{ defaultAuth.username }}</strong> and password
           <strong>{{ defaultAuth.password }}</strong> to continue.
         </div>
       </div>
-    </ng-container>
+    </ng-container> -->
     <!-- end::Alert info-->
-
-    <!-- begin::Alert error-->
-    <ng-container *ngIf="hasError">
+    
+    <ng-container *ngIf=" authService._hasError$ | async ">
       <div
         class="mb-10 alert alert-custom alert-light-danger alert-dismissible"
       >
-        <div class="alert-text">The login details are incorrect</div>
+        <div class="alert-text">{{message}}</div>
       </div>
     </ng-container>
     <!-- end::Alert error-->
 
     <!--begin::Form group-->
     <div class="form-group">
-      <label class="font-size-h6 font-weight-bolder text-dark">Email</label>
+      <label class="font-size-h6 font-weight-bolder text-dark">username</label>
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg"
-        type="email"
-        name="email"
-        formControlName="email"
+        name="username"
+        formControlName="username"
         autocomplete="off"
-        [ngClass]="{ 'is-invalid': loginForm.controls['email'].invalid }"
+       
       />
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Email is required',
-          control: loginForm.controls['email']
+          message: 'Nombre de Usuario es Obligatorio',
+          control: loginForm.controls['username']
         }"
       ></ng-container>      
-      <ng-container
+      <!-- <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
-          validation: 'email',
-          message: 'Email is invalid',
-          control: loginForm.controls['email']
+          validation: 'username',
+          message: 'Nombre de usuario Invalido',
+          control: loginForm.controls['username']
         }"
-      ></ng-container>
+      ></ng-container> -->
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
-          validation: 'minLength',
-          message: 'Email should have at least 3 symbols',
-          control: loginForm.controls['email']
+          validation: 'minlength',
+          message: 'La contraseña debe tener almenos 3 digitos',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Email should have maximum 360 symbols',
-          control: loginForm.controls['email']
+          message: 'El nombre de usuario debe tener 8 caracteres como maximo',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
     </div>
@@ -96,15 +95,9 @@
     <div class="form-group">
       <div class="d-flex justify-content-between mt-n5">
         <label class="font-size-h6 font-weight-bolder text-dark pt-5"
-          >Password</label
+          >Contraseña</label
         >
-        <a
-          routerLink="/auth/forgot-password"
-          class="text-primary font-size-h6 font-weight-bolder text-hover-primary pt-5"
-          id="kt_login_forgot"
-        >
-          Forgot Password ?
-        </a>
+        
       </div>
 
       <input
@@ -119,7 +112,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Password is required',
+          message: 'La contraseña es obligatoria',
           control: loginForm.controls['password']
         }"
       ></ng-container>
@@ -127,7 +120,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Password should have at least 3 symbols',
+          message: 'La contraseña debe tener almenos 3 digitos',
           control: loginForm.controls['password']
         }"
       ></ng-container>
@@ -135,10 +128,17 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Password should have maximum 100 symbols',
+          message: 'La contraseña debe ser maximo de 8 caracteres',
           control: loginForm.controls['password']
         }"
       ></ng-container>
+      <a 
+          routerLink="/auth/forgot-password"
+          class="text-primary font-size-h6 font-weight-bolder text-hover-primary pt-5"
+          id="kt_login_forgot"
+        >
+          Olvido la Contraseña ?
+        </a>
     </div>
     <!--end::Form group-->
 
@@ -150,21 +150,22 @@
         class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3"
         [disabled]="loginForm.invalid"
       >
-        Sign In
+        Ingresar
       </button>
 
       <button
         type="button"
+        disabled
         class="btn btn-light-primary font-weight-bolder px-8 py-4 my-3 font-size-lg"
       >
         <span class="svg-icon svg-icon-md">
           <img src="./assets/media/svg/social-icons/google.svg" />
         </span>
-        Sign in with Google
+        Ingresar con Google
       </button>
 
       <ng-container *ngIf="isLoading$ | async">
-        <span class="spinner spinner-primary ml-5"></span>
+        <loading-spinner></loading-spinner>
       </ng-container>
     </div>
     <!--end::Action-->
