--- a/src/app/modules/auth/registration/registration.component.html
+++ b/src/app/modules/auth/registration/registration.component.html
@@ -11,10 +11,10 @@
     <!--begin::Title-->
     <div class="pb-13 pt-lg-0 pt-5">
       <h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-        Sign Up
+        Registro
       </h3>
       <p class="text-muted font-weight-bold font-size-h4">
-        Enter your details to create your account
+        Llena el formulario con tus datos
       </p>
     </div>
     <!--end::Title-->
@@ -24,14 +24,14 @@
       <div
         class="mb-10 alert alert-custom alert-light-danger alert-dismissible"
       >
-        <div class="alert-text">The registration details are incorrect</div>
+        <div class="alert-text">Los datos registrados son incorrectos</div>
       </div>
     </ng-container>
     <!-- end::Alert error-->
 
     <!--begin::Form group-->
     <div class="form-group">
-      <label class="font-size-h6 font-weight-bolder text-dark">Fullname</label>
+      <label class="font-size-h6 font-weight-bolder text-dark">Nombre Completo</label>
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6"
         type="text"
@@ -47,7 +47,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Fullname is required',
+          message: 'El Nombre completo es obligatorio',
           control: registrationForm.controls['fullname']
         }"
       ></ng-container>
@@ -55,7 +55,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Fullname should have at least 3 symbols',
+          message: 'Nombre debe de tener almenos 3 caracteres',
           control: registrationForm.controls['fullname']
         }"
       ></ng-container>
@@ -63,7 +63,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Fullname should have maximum 100 symbols',
+          message: 'Nombre debe de tener maximo 100 caracteres',
           control: registrationForm.controls['fullname']
         }"
       ></ng-container>
@@ -86,7 +86,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Email is required',
+          message: 'El Email es obligatorio',
           control: registrationForm.controls['email']
         }"
       ></ng-container>
@@ -94,7 +94,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'email',
-          message: 'Email is invalid',
+          message: 'El email es invalido',
           control: registrationForm.controls['email']
         }"
       ></ng-container>
@@ -116,11 +116,45 @@
       ></ng-container>
     </div>
     <!--end::Form group-->
-
+    <div class="form-group">
+      <label class="font-size-h6 font-weight-bolder text-dark">Usuario</label>
+      <input
+        class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6"
+        placeholder="Usuario"
+        name="username"
+        formControlName="username"
+        autocomplete="off"
+        [ngClass]="{ 'is-invalid': registrationForm.controls['username'].invalid }"
+      />
+      <ng-container
+        [ngTemplateOutlet]="formError"
+        [ngTemplateOutletContext]="{
+          validation: 'required',
+          message: 'El nombre de usuario es Obligatorio',
+          control: registrationForm.controls['username']
+        }"
+      ></ng-container>
+      <ng-container
+        [ngTemplateOutlet]="formError"
+        [ngTemplateOutletContext]="{
+          validation: 'minlength',
+          message: 'El usuario debe ser de almenos 3 digitos',
+          control: registrationForm.controls['username']
+        }"
+      ></ng-container>
+      <ng-container
+        [ngTemplateOutlet]="formError"
+        [ngTemplateOutletContext]="{
+          validation: 'maxLength',
+          message: 'El usuario debe ser de maximo 8 digitos',
+          control: registrationForm.controls['username']
+        }"
+      ></ng-container>
+    </div>
     <!--begin::Form group-->
     <div class="form-group">
       <label class="font-size-h6 font-weight-bolder text-dark pt-5"
-        >Password</label
+        >Contraseña</label
       >
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6"
@@ -137,7 +171,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Password is required',
+          message: 'La contraseña es obligatoria',
           control: registrationForm.controls['password']
         }"
       ></ng-container>
@@ -145,7 +179,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Password should have at least 3 symbols',
+          message: 'La contraseña debe tener al menos 3 caracteres',
           control: registrationForm.controls['password']
         }"
       ></ng-container>
@@ -153,7 +187,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Password should have maximum 100 symbols',
+          message: 'La contraseña debe tener maximo 100 caracteres',
           control: registrationForm.controls['password']
         }"
       ></ng-container>
@@ -163,7 +197,7 @@
     <!--begin::Form group-->
     <div class="form-group">
       <label class="font-size-h6 font-weight-bolder text-dark pt-5"
-        >Confirm Password</label
+        >Confirmar Contraseña</label
       >
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6"
@@ -180,7 +214,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Confirm Password is required',
+          message: 'Reescribe la contraseña',
           control: registrationForm.controls['cPassword']
         }"
       ></ng-container>
@@ -188,7 +222,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Confirm Password should have at least 3 symbols',
+          message: 'Contraseña debe tener minimo 3 caracteres',
           control: registrationForm.controls['cPassword']
         }"
       ></ng-container>
@@ -196,7 +230,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Confirm Password should have maximum 100 symbols',
+          message: 'Contraseña debe tener maximo 100 caracteres',
           control: registrationForm.controls['cPassword']
         }"
       ></ng-container>
@@ -208,7 +242,7 @@
       >
         <div class="fv-plugins-message-container">
           <div class="fv-help-block">
-            'Passsword' and 'Confirm Password' didn't match.
+            'Las Contraseñas no coinciden.
           </div>
         </div>
       </ng-container>
@@ -219,10 +253,10 @@
     <div class="form-group">
       <label class="checkbox mb-0">
         <input type="checkbox" formControlName="agree" name="agree" />&nbsp;I
-        Agree the&nbsp;<a
-          href="https://keenthemes.com/metronic/?page=faq"
+        Acepto los&nbsp;<a
+          href=""
           target="_blank"
-          >terms and conditions</a
+          >terminos y condiciones</a
         >.&nbsp;
         <span></span>
       </label>
@@ -239,7 +273,7 @@
         "
         class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-4"
       >
-        Submit
+        Guardar Datos
       </button>
       <a
         routerLink="/auth/login"
