--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -103,7 +103,8 @@
   </div>
 </div>
 
-<mat-tab-group class="col-md-12" style="min-width: 0; padding: 3px">
+<mat-tab-group [selectedIndex]="selectedIndex" class="col-md-12" style="min-width: 0; padding: 3px">
+
   <mat-tab label="Reserva">
     <app-reservas-component></app-reservas-component>
   </mat-tab>
@@ -111,6 +112,14 @@
   <!--HUESPED TAB-->
   <mat-tab label="Huésped">
     <app-huesped-component></app-huesped-component>
+  </mat-tab>
+
+  <mat-tab label="Transacciones">
+    <app-transacciones-component></app-transacciones-component>
+  </mat-tab>
+
+  <mat-tab label="Edo de Cuenta">
+    <app-edo-cuenta-component></app-edo-cuenta-component>>
   </mat-tab>
 </mat-tab-group>
 
@@ -143,7 +152,10 @@
       </div>
 
       <div class="col-lg-6">
-        <button disabled class="btn btn-warning btn-block" type="submit">
+        <button 
+        (click)="setStep(2)">
+        class="btn btn-warning btn-block" 
+        type="submit">
           Realiza un Pago
         </button>
         <br>
@@ -216,7 +228,10 @@
       
 
       <div class="col-lg-12">
-        <button class="btn btn-warning btn-block" type="submit">
+        <button 
+        class="btn btn-warning btn-block" 
+        type="submit"
+        (click)="setStep(2)">
           Realiza un Pago
         </button>
         <br>
